check mariadb: cannot log in with root and aborts; nginx and wpwork but fail to connect to mariadb(expected)

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,31 +1,27 @@
 ###############__Volumes__###############
-DATA_DIR='/home/samu/data/db'
+DB_DIR='/home/samu/data/db'
 WP_DIR='/home/samu/data/wp'
 
-
-###############__MariaDB__###############
-MYSQL_ROOT_PASSWORD='potato123'
-MYSQL_DATABASE='db_name'
-MYSQL_USER='sacorder'
-MYSQL_PASSWORD='potato123'
+DOMAIN_NAME=sacorder.42.fr
+CERTS_=/etc/ssl/certs/nginx-selfsigned.crt
 
 
-##############__Wordpress__##############
-WORDPRESS_TITLE='Inception'
+# WORDPRESS SETUP
+WP_TITLE=Inception
+WP_ADMIN_USR=angryboss
+WP_ADMIN_PWD=1234
+WP_ADMIN_EMAIL=angryboss@gmail.com
+WP_USR=wp_mod
+WP_EMAIL=wp_mod@1337.com
+WP_PWD=123
+db_name=wpdb
+db_user=itguy
+db_pwd=crazypass123
+root_pass=crazycrazypass321
 
-WORDPRESS_DB_HOST='mysql'
-WORDPRESS_DB_NAME='db_name'
-WORDPRESS_TABLE_PREFIX='wp_'
 
-WORDPRESS_DB_USER='sacorder'
-WORDPRESS_DB_PASSWORD='potato123'
-WORDPRESS_ADMIN_EMAIL='sacorder@student.42madrid.com'
+# MYSQL SETUP
+db1_name=wpdb
+db1_user=itguy
+db1_pwd=crazypass123
 
-
-WORDPRESS_USER2='sacorder_clone'
-WORDPRESS_USER2_PASSWORD='potato123'
-WORDPRESS_USER2_EMAIL='sacorder_clone@student.42madrid.com'
-
-###############__Domain__################
-DOMAIN_NAME='sacorder.42.fr'
-CERTS_='/etc/ssl/certs/nginx-selfsigned.crt'
