--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,84 +1,59 @@
-version: '3.8'
+version: "3.5"
 
-services:
-
-########################__MariaDB__########################
-  mariadb:
-    build: requirements/mariadb
-    container_name: mariadb
-
-    env_file:
-      - .env
-
-    networks:
-      - inception
-
-    volumes:
-      - db_volume:/var/lib/mysql
-
-    restart: always
-
-#######################__Wordpress__#######################
-  wordpress:
-    build: requirements/wordpress
-    container_name: wordpress
-
-    depends_on:
-      - mariadb
-
-    env_file:
-      - .env
-    
-    networks:
-      - inception
-
-    volumes:
-      - wp_volume:/var/www/html
-
-    restart: always
-
-#########################__Nginx__#########################
-  nginx:
-    build: requirements/nginx
-    container_name: nginx
-
-    env_file:
-      - .env
-
-    ports:
-      - "443:443"
-    
-    depends_on:
-      - wordpress
-    
-    volumes:
-      - wp_volume:/var/www/html
-
-    networks:
-      - inception
-    
-    restart: always
-
-########################__Volumes__########################
 volumes:
+        wordpress:
+                name: wordpress
+                driver: local
+                driver_opts:
+                        device: ${WP_DIR}
+                        o: bind
+                        type: none
+        mariadb:
+                name: mariadb
+                driver: local
+                driver_opts:
+                        device: ${DB_DIR}
+                        o: bind
+                        type: none
 
-  db_volume:
-    driver: local
-    driver_opts:
-      o: bind
-      type: none
-      device: ${DATA_DIR}
-
-  
-  wp_volume:
-    driver: local
-    driver_opts:
-      o: bind
-      type: none
-      device: ${WP_DIR}
-
-
-########################__Network__########################
 networks:
   inception:
     name: inception
+
+services:
+  nginx:
+    container_name: nginx
+    build: ./requirements/nginx
+    ports:
+     - "443:443"
+    depends_on:
+      - wordpress
+    volumes:
+     - wordpress:/var/www/html
+    networks:
+      - inception
+    env_file:
+      - .env
+    restart: always
+  wordpress:
+    container_name: wordpress
+    build: ./requirements/wordpress
+    depends_on:
+      - mariadb
+    volumes:
+      - wordpress:/var/www/html
+    env_file:
+      - .env
+    networks:
+      - inception
+    restart: always
+  mariadb:
+    container_name: mariadb
+    build: ./requirements/mariadb
+    volumes:
+      - mariadb:/var/lib/mysql
+    env_file:
+      - .env
+    networks:
+      - inception
+    restart: always
