--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,5 +1,5 @@
 # MariaDb Dockerfile
-FROM debian:buster-20230904
+FROM debian:bullseye-20240408
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -8,8 +8,8 @@ RUN apt update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-COPY ./50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
+COPY ./50-server.cnf /etc/mysql/my.cnf
 COPY ./tools/mysql_setup /run.sh
 
 RUN chmod +x /run.sh
