--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,18 +1,15 @@
-# NGINX Dockerfile
-FROM debian:buster-20230904
+FROM debian:bullseye-20240408
 
-ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt update && \
-	apt-get install -y nginx openssl && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+RUN apt -y update && apt install -y nginx && apt install openssl -y
 
-RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048\
-            -keyout /etc/ssl/private/nginx-selfsigned.key\
-            -out /etc/ssl/certs/nginx-selfsigned.crt\
-            -subj "/C=ES/L=MD/O=42/OU=student/CN=sacorder.42.fr"
 
-COPY ./conf /etc/nginx/sites-available/
 
-CMD ["nginx", "-g", "daemon off;"]
+
+# COPY ./conf/default /etc/nginx/sites-available/
+
+COPY ./tools/nginx_setup /run.sh
+
+RUN chmod +x /run.sh
+
+CMD [ "/run.sh" ]
