--- a/srcs/.env
+++ b/srcs/.env
@@ -14,14 +14,11 @@ WP_ADMIN_EMAIL=angryboss@gmail.com
 WP_USR=wp_mod
 WP_EMAIL=wp_mod@1337.com
 WP_PWD=123
-db_name=wpdb
-db_user=itguy
-db_pwd=crazypass123
-root_pass=crazycrazypass321
+DB_NAME=wpdb
+DB_USER=itguy
+DB_PWD=crazypass123
+ROOT_PASS=crazycrazypass321
 
 
 # MYSQL SETUP
-db1_name=wpdb
-db1_user=itguy
-db1_pwd=crazypass123
-
+ROOT_PASS=crazycrazypass321
