updated pass + makefile

--- a/srcs/.env
+++ b/srcs/.env
@@ -6,19 +6,15 @@ DOMAIN_NAME=sacorder.42.fr
 CERTS_=/etc/ssl/certs/nginx-selfsigned.crt
 
 
-# WORDPRESS SETUP
+# WORDPRESS SETUP / MYSQL SETUP
 WP_TITLE=Inception
-WP_ADMIN_USR=angryboss
+WP_ADMIN_USR=thewopfather
 WP_ADMIN_PWD=1234
-WP_ADMIN_EMAIL=angryboss@gmail.com
-WP_USR=wp_mod
+WP_ADMIN_EMAIL=thewopfather@gmail.com
+WP_USR=anuser
 WP_EMAIL=wp_mod@1337.com
 WP_PWD=123
 DB_NAME=wpdb
 DB_USER=itguy
 DB_PWD=crazypass123
-ROOT_PASS=crazycrazypass321
-
-
-# MYSQL SETUP
 ROOT_PASS=crazycrazypass321
