--- a/srcs/.env
+++ b/srcs/.env
@@ -9,11 +9,11 @@ CERTS_=/etc/ssl/certs/nginx-selfsigned.crt
 # WORDPRESS SETUP
 WP_TITLE=Inception
 WP_ADMIN_USR=angryboss
-WP_ADMIN_PWD=1234
+WP_ADMIN_PWD=12341234
 WP_ADMIN_EMAIL=angryboss@gmail.com
 WP_USR=wp_mod
-WP_EMAIL=wp_mod@1337.com
-WP_PWD=123
+WP_EMAIL=wp_mod@gmail.com
+WP_PWD=123123
 DB_NAME=wpdb
 DB_USER=itguy
 DB_PWD=crazypass123
